# ardrone_tf_controller

./: CHANGELOG.rst  CHANGELOG.rst.autosave  CMakeLists.txt  CMakeLists.txt.user.9644b63  README.md  ardrone_tf_controller.kdev4  package.xml
.kdev4/: ardrone_tf_controller.kdev4
Launch files/: cooperative.launch  single_both_cameras.launch  uav_usv.launch
ardrone_tf_controller/: CMakeLists.txt  package.xml
ardrone_tf_controller/include/: offset.h
ardrone_tf_controller/launch/: coop_usv.launch  frontcamera_autopilot.launch
ardrone_tf_controller/src/: ardrone_tf_controller.cpp  bottomcamera_autopilot.cpp  coop_controller.cpp  coop_usv_controller.cpp  frontcamera_autopilot.cpp  offset.cpp  test_pid_controller.cpp  usv_controller.cpp  utilities.cpp
ardrone_tf_controller/srv/: ResetPosition.srv
cfg/: TFAutopilotParams.cfg
flights/: marker_size_distance.fig
flights/16-05-2016/: Config.txt
flights/17-05-2016/Documents/: Test1-2.eps  Test3-4.eps  Test5-6.eps
flights/17-05-2016/Test1/: Config.txt
flights/17-05-2016/Test2/: Config.xml
flights/17-05-2016/Test3/: Config.txt
flights/17-05-2016/Test4/: Config.txt
flights/17-05-2016/Test5/: Config.txt
flights/17-05-2016/Test6/: Config.txt
flights/Moving Marker/: 3d_graph_xyz.fig  UGV_straight_line_2.mat  UGV_straight_line_2.txt  UGV_straight_line_2_cmd.mat  UGV_straight_line_2_cmd.txt  UGV_straight_line_2_cmd_new.mat  read_cmd.py  read_file.py
flights/Moving Marker/Flight Test 2/: UGV_cmd_vel.fig  quadcopter_trajectory.fig  quadcopter_vel_displacement.fig
flights/Moving Marker/Flight test3/: Profile.eps  Profile.fig  Trajectory.eps  Trajectory.fig  Ugv.eps
flights/Static marker/Above/: 2016-07-20-14-25-08.bag  2016-07-20-16-14-55.bag  2016-07-20-16-22-25.bag
flights/Static marker/Left Orientation/: Ahead.bag  Behind.bag  Left.bag  Right.bag
flights/Static marker/Opposite orientation/: 2016-09-19-15-36-40.bag  Ahead.bag  Behind.bag  Left.bag  Right.bag
flights/Static marker/Right Orientation/: Ahead.bag  Ahead.fig  Ahead.mat  Behind.bag  Behind.fig  Behind.mat  Left.bag  Left.fig  Left.mat  Right.bag  Right.fig  Right.mat  plot_data.m  read_file.py  read_file.py~
flights/Static marker/Same orientation/: 2016-07-22-14-57-49.bag  2016-07-22-15-22-51.bag  2016-07-22-15-24-04.bag  2016-07-22-15-25-03.bag  Same_orientation_1.mat  Same_orientation_2.mat  Same_orientation_2.txt  Same_orientation_3.mat  Same_orientation_3.txt  Same_orientation_4.mat  Same_orientation_4.txt  plot_data.m  read_file.py
flights/Static marker/UGV_static/: Speed_altitude.eps  Speed_altitude.fig  UGV_static.mat  linear_offset.txt  rotation_offset.txt  trajectory.eps  trajectory.fig
include/: offset.h  utilities.h
launch/: autopilot.launch  bottomcamera_autopilot.launch  coop.launch  frontcamera_autopilot.launch
src/: .bottomcamera_autopilot.cpp.kate-swp  ardrone_tf_controller.cpp  bottomcamera_autopilot.cpp  coop_controller.cpp  frontcamera_autopilot.cpp  offset.cpp  reset_filter.cpp  send_target_autopilot.cpp  usv_controller.cpp  utilities.cpp
teleop_ardrone/: CMakeLists.txt  package.xml
teleop_ardrone/launch/: ar_pose_reverse_drone.launch  ar_pose_single_drone.launch  teleop_3d.launch  teleop_ardrone_keyboard.launch  teleop_husky.launch  teleop_kb.launch  teleop_kb_coop.launch  teleop_kb_single.launch
teleop_ardrone/src/: teleop_ardrone_keyboard.py  teleop_ardrone_keyboard_coop.py  teleop_ardrone_single.py  teleop_ardrone_spacenav.cpp  teleop_husky.py  teleop_husky.py~
tum_simulator/cvg_sim_gazebo/config/: localization_coop.yaml
tum_simulator/cvg_sim_gazebo/launch/: .gitignore  ardrone_testworld.launch  both_cameras.launch  control_coop.launch  cooperative.launch  empty_world.launch  spawn_husky.launch  spawn_quadrotor.launch  spawn_quadrotor.launch.save
tum_simulator/cvg_sim_gazebo/urdf/: decorations.urdf.xacro  description.gazebo.xacro  husky.gazebo.xacro  husky.urdf.xacro  quadrotor.urdf.xacro  quadrotor_base.urdf.xacro  quadrotor_sensors.urdf.xacro
tum_simulator/cvg_sim_gazebo/worlds/: .gitignore  ardrone_testworld.world  both_cameras_world.world  cooperative_world.world
tum_simulator/cvg_sim_gazebo_plugins/src/: gazebo_ros_gps.cpp  gazebo_ros_imu.cpp  gazebo_ros_magnetic.cpp  quadrotor_simple_controller.cpp  quadrotor_state_controller.cpp
tum_simulator/cvg_sim_gazebo_plugins/urdf/: quadrotor_sensors.urdf.xacro  quadrotor_simple_controller.urdf.xacro
tum_simulator/kingfisher_control/launch/: ex_localization.launch  localization.launch
tum_simulator/kingfisher_desktop/: CHANGELOG.rst  CMakeLists.txt  package.xml
tum_simulator/kingfisher_gazebo/launch/: elestero.launch  kingfisher_gazebo_worlds.launch  uav_usv.launch
tum_simulator/kingfisher_gazebo/urdf/: kingfisher_urdf.xacro
tum_simulator/kingfisher_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
tum_simulator/kingfisher_viz/launch/: view_model.launch  view_robot.launch
tum_simulator/kingfisher_viz/rviz/: model.rviz  robot.rviz
tum_simulator/marker/: model.sdf
tum_simulator/message_to_tf/src/: message_to_tf.cpp
uga_tum_ardrone/: CMakeLists.txt  mainpage.dox  package.xml
uga_tum_ardrone/cfg/: .AutopilotParams.cfg.swp  AutopilotParams.cfg  AutopilotParams.cfg.save  GUIParams.cfg  StateestimationParams.cfg
uga_tum_ardrone/flightPlans/: demo_init.txt  test.txt
uga_tum_ardrone/launch/: coop_uga_tum_ardrone.launch  coop_uga_tum_ardrone.launch~  uga_tum_ardrone.launch  uga_tum_ardrone.launch.save  uga_tum_ardrone.launch~
uga_tum_ardrone/src/: HelperFunctions.h
uga_tum_ardrone/src/UINode/: PingThread.cpp  PingThread.h  RosThread.cpp  RosThread.h  main_GUI.cpp  uga_tum_ardrone_gui.cpp  uga_tum_ardrone_gui.h  uga_tum_ardrone_gui.pro  uga_tum_ardrone_gui.ui
uga_tum_ardrone/src/autopilot/: ControlNode.cpp  ControlNode.h  DroneController.cpp  DroneController.h  main_autopilot.cpp
uga_tum_ardrone/src/stateestimation/: DroneKalmanFilter.cpp  DroneKalmanFilter.h  EstimationNode.cpp  EstimationNode.h  MapView.cpp  MapView.h  MouseKeyHandler.h  PTAMWrapper.cpp  PTAMWrapper.h  Predictor.cpp  Predictor.h  main_stateestimation.cpp
(+13 files in other folders)
