<?xml version="1.0"?>
<package>
  <name>kingfisher_viz</name>
  <version>0.0.1</version>
  <description>Visualization and rviz helpers for Kingfisher</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- For roslaunch_add_file_check() macro -->
  <build_depend>roslaunch</build_depend>

  <run_depend>kingfisher_description</run_depend>
  <!-- <run_depend>kingfisher_interactive_markers</run_depend> -->
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
